fix: исправление фильтров для источников